# consolation

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  README  configure.ac
src/: Makefile.am  action.c  consolation.c  consolation.h  input.c  selection.c  shared.c  shared.h
